fix align elements2

--- a/Cadastro/Acadastro/style.css
+++ b/Cadastro/Acadastro/style.css
@@ -18,6 +18,7 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    filter: grayscale(40%);
     width: 100vw;
     height: 100vh;
     z-index: 1;
@@ -42,7 +43,7 @@ body{
 }
 #menu-popup{
     position: fixed;
-    margin-top: 77px;
+    margin-top: clamp(4.2vw + 4.2em, 113.9vw + 3em, 4.3vw + 4.3em);
     margin-left: 20px;
     width: 30px;
     z-index: 1500;
@@ -58,7 +59,7 @@ body{
     border: solid 1px #868383a1;
     backdrop-filter: blur(1.35rem);
     margin-left: -350px;
-    margin-top: 59px;
+    margin-top: clamp(2vw + 2em, 4.3vw + 3em, 19vw + 19em);
     border-top-style: none;
     border-left-style: none;
     border-bottom-right-radius: 10px;
@@ -153,6 +154,7 @@ body{
 #title-section{
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 23px;
     font-family: 'Space Grotesk', sans-serif;
     font-size: 17.5px;
     line-height: 30px;
@@ -161,9 +163,72 @@ body{
     color:#FFFFFF;
     z-index: 900;
 }
-.box-align-input, .align-date{
+.box-align-input{
     display: flex;
-    flex-direction: row;
+    gap: 24px;
+}
+/* .error-cpf {
+    border-bottom: solid 2px rgb(184, 1, 1);
+    z-index: 48;
+} */
+#verific {
+    position: absolute;
+    margin-left: 157px;
+    margin-top: -74px;
+    width: 16px;
+    display: none;
+    z-index: 45;
+}
+#error-detect{
+    position: absolute;
+    margin-left: 157px;
+    margin-top: -74px;
+    width: 17px;
+    display: none;
+    z-index: 46;
+}
+.genericLabel{
+    position: absolute;
+    font-family: 'Inter', sans-serif;
+    font-size: 0.9em;
+    transform: scale(0.7);
+    margin-top: 1px;
+    margin-left: -23px;
+    letter-spacing: 0.05rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: rgb(189, 186, 186);
+    width: 155px;
+    animation: animateClickOut 70ms linear;
+}
+.genericInput{
+    font-family: 'Inter', sans-serif;
+    font-size: 0.9em;
+    letter-spacing: 0.2rem;
+    background-color: #e0080800;
+    border-bottom: solid 2px rgb(189, 186, 186);
+    border-right: 0;
+    border-top: 0;
+    border-left: 0;
+    outline: 0;
+    color: #ffffff;
+    height: 30%;
+    margin-bottom: 50px;
+}
+.cpf-id{
+    width: 175px;
+}
+.happyBirthday{
+    width: 110px;
+}
+.patient_name, .mother, .father{
+    width: 100%;
+}
+
+
+/* ------------------------------------------------------------------ */
+/* .box-align-input, .align-date {
+    display: flex;
     margin-top: 55px;
     height: 55px;
 }
@@ -183,7 +248,7 @@ body{
     color: #ffffff;
     text-transform: uppercase;
     outline: 0;
-    width: 10rem;
+    width: 10.5rem;
     height: 60%;
     z-index: 5;
 }
@@ -193,7 +258,7 @@ body{
 }
 #verific {
     position: absolute;
-    margin-left: 160px;
+    margin-left: 165px;
     margin-top: 8px;
     width: 16px;
     display: none;
@@ -201,8 +266,8 @@ body{
 }
 #error-detect{
     position: absolute;
-    margin-left: 160px;
-    margin-top: 8px;
+    margin-left: 165px;
+    margin-top: 7px;
     width: 18px;
     display: none;
     z-index: 46;
@@ -269,7 +334,7 @@ body{
     color: #ffffff;
     text-transform: uppercase;
     outline: 0;
-    width: 6.5rem;
+    width: 6.7rem;
     height: 35px;
     margin-top: -56px;
     margin-left: 34px;
@@ -316,6 +381,5 @@ body{
     } 100%{
         transform: scale(0.5);
     }
-}
 
-/* ------------------------------------------------------------------ */
+} */
